[gd_scene load_steps=3 format=3 uid="uid://bugda5o3gdqi0"]

[ext_resource type="Script" path="res://src/checkpoint/checkpoint.gd" id="1_m3lga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j2xmv"]
size = Vector2(100, 100)

[node name="Checkpoint" type="Node2D"]
script = ExtResource("1_m3lga")
heal = 1

[node name="LabelTimer" type="Timer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(1, 0.501961, 1, 1)

[node name="Area2D" type="Area2D" parent="." groups=["checkpoint"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_j2xmv")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -104.0
offset_top = -135.0
offset_right = 105.0
offset_bottom = -49.0
text = "PUNKT KONTROLNY OSIĄGNIĘTY"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="timeout" from="LabelTimer" to="." method="_on_label_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
